<resources>
    <string name="app_name">RSMungMusic</string>

    <string name="button_exit">退出</string>
    <string name="button_ok">确定</string>
    <string name="login_error">密码错误，请重试！</string>
    <string name="welcome">欢迎您 </string>
    <string name="null_username">用户名为空！</string>
    <string name="history">历史播放记录</string>
    <string name="time_pauseplay">定时停止播放</string>
    <string name="time_off">定时关机</string>
    <string name="input_time">请输入时间</string>
    <string name="mode_play">播放模式</string>
    <string name="search">搜索</string>
    <string name="time_hint">请输入时间(单位:分钟)</string>
    <string name="rest_of_time">剩余时间(单位:分钟)</string>
    <string name="task_ok">建立任务</string>
    <string name="task_cancel">取消任务</string>
    <string name="search_hint">搜索本地歌曲</string>
    <string name="search_result">搜索结果</string>

    <string name="music_image_content">这首音乐的专辑图片</string>
    <!--DisplayActivity-->
    <string name="title_toolbar">我的音乐</string>
    <string name="share">分享</string>
    <string name="about">关于</string>
    <string name="refresh">刷新</string>
    <string name="player_info">1.Mung音乐播放器_版本1.4.2</string>
    <string name="developer">2.开发者: RSMung</string>
    <string name="email">3.Email: \n rs249310509@163.com</string>
    <string name="privacy_policy">4.隐私政策: \n   https://blog.csdn.net/lvdoujack/article/details/104106734</string>
    <string name="encourage">5.其它: \n 个人开发,兴趣所在,您的鼓励支持就是我最大的动力;反应问题可Email我,RSMung在这里十分感谢</string>
    <!--LoginActivity-->
    <string name="username_hint">用户名</string>
    <string name="userpassword_hint">密码</string>
    <string name="CheckBox_hint_user">记住用户名</string>
    <string name="CheckBox_hint_password">记住密码</string>
    <string name="button_login">登录</string>
    <string name="button_reg">register</string>
    <string name="forget_pas">ForgetPassword"?"</string>
    <!--SearchDetailActivity-->
    <!--    SongDetailActivity-->
    <string name="order_mode">顺序播放</string>
    <string name="cycle_mode">单曲循环</string>
    <string name="random_mode">随机播放</string>
    <!--    ShareActivity-->
    <string name="save">保存</string>
</resources>
