<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context="edu.whut.ruansong.musciplayer.LoginActivity">

    <edu.whut.ruansong.musciplayer.dynamicBackGround.VideoBackground
        android:id="@+id/videoview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/edtext_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_5"
                android:hint="@string/username_hint"
                android:singleLine="true"
                android:textColorHint="@color/blue_color"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/edtext_pas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_5"
                android:hint="@string/userpassword_hint"
                android:inputType="numberPassword"
                android:singleLine="true"
                android:textColorHint="@color/red_color"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/ckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/CheckBox_hint" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5">

            <Button
                android:id="@+id/button_exit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/dp_60"
                android:background="@drawable/shape"
                android:text="@string/button_exit"
                android:textColor="@color/black_color" />

            <Button
                android:id="@+id/button_ok"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dp_60"
                android:background="@drawable/shape"
                android:text="@string/button_ok"
                android:textColor="@color/black_color" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
